Fix mobile horizontal overflow issue - lock screen to prevent floating

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 html {
   background-color: transparent;
+  overflow-x: hidden;
 }
 
 body {
@@ -18,6 +19,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  width: 100%;
+  position: relative;
 }
 
 code {
